# claude_code_essentials

cc-fundamentals-01-getting-started/: .mcp.json  README.md
cc-fundamentals-01-getting-started/.claude/: CLAUDE.md  settings.json
cc-fundamentals-01-getting-started/docs/: .gitkeep
cc-fundamentals-01-getting-started/src/: .gitkeep
cc-fundamentals-02-commands/: README.md
cc-fundamentals-02-commands/guides/: command-sections.md  template-pattern.md  what-are-commands.md
cc-fundamentals-02-commands/templates/: command-template.md
cc-fundamentals-03-core-workflow/: .gitignore  README.md
cc-fundamentals-03-core-workflow/guides/: specs-folder-system.md  workflow-recipes.md
cc-fundamentals-03-core-workflow/templates/: spec-template.md
cc-fundamentals-04-mcps/: .env.example  .mcp.json  README.md
cc-fundamentals-04-mcps/guides/: mcp-security.md  recommended-mcps.md  three-capabilities.md  what-is-mcp.md
cc-fundamentals-04-mcps/mcps/journal/: README.md  pyproject.toml  server.py
cc-fundamentals-04-mcps/mcps/memory/: README.md  pyproject.toml  server.py
cc-fundamentals-04-mcps/mcps/prompts/: README.md  pyproject.toml  server.py
cc-fundamentals-04-mcps/templates/: mcp-json-full.json  mcp-json-template.json
cc-fundamentals-05-skills/: README.md  resources.md
cc-fundamentals-05-skills/guides/: how-skills-trigger.md  (+4 more)
cc-fundamentals-06-subagents/: .gitignore  README.md  resources.md
cc-fundamentals-07-security/: README.md  resources.md
cc-fundamentals-09-validation/: README.md  resources.md
cc-fundamentals-10-tips-tricks/: README.md  resources.md
(+259 files in other folders)
