[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal"
version = "1.0.0"
description = "Daily work journal for tracking progress, decisions, and blockers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
journal = "server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
